classDiagram
direction BT
class EdgeStrategy {
<<Interface>>
  + adjustCoordinate(Point2D, int, int) Point2D
}
class EdgeStrategyFactory {
  + EdgeStrategyFactory() 
  + createEdgeStrategy(EdgeStrategyType) EdgeStrategy
}
class FixedEdgeStrategy {
  + FixedEdgeStrategy() 
  + adjustCoordinate(Point2D, int, int) Point2D
}
class MirrorEdgeStrategy {
  + MirrorEdgeStrategy() 
  + adjustCoordinate(Point2D, int, int) Point2D
}
class ToroidalEdgeStrategy {
  + ToroidalEdgeStrategy() 
  + adjustCoordinate(Point2D, int, int) Point2D
}

EdgeStrategyFactory  ..>  FixedEdgeStrategy : «create»
EdgeStrategyFactory  ..>  MirrorEdgeStrategy : «create»
EdgeStrategyFactory  ..>  ToroidalEdgeStrategy : «create»
FixedEdgeStrategy  ..>  EdgeStrategy 
MirrorEdgeStrategy  ..>  EdgeStrategy 
ToroidalEdgeStrategy  ..>  EdgeStrategy 
